--- a/assets/custom/css/business-plate.css
+++ b/assets/custom/css/business-plate.css
@@ -1,5 +1,5 @@
 body{color:#858585}
-a, a:hover, a:active{color: #ff4800;}
+a, a:hover, a:active{color: #00aac0;}
 img{max-width:100%}
 .cntr{text-align:center;}
 .ourServices {padding:40px 0}
