--- a/assets/custom/css/business-plate.css
+++ b/assets/custom/css/business-plate.css
@@ -215,7 +215,7 @@ transition: all 0.3s ease-out;
 .nav>li>a:hover, .nav>li>a:focus {text-decoration: none;background-color: #fff;}
 .nav .open>a, .nav .open>a:hover, .nav .open>a:focus {background-color: #fff; border-color: #428bca;}
 .navbar-nav>li>a {padding-top: 6px;padding-bottom: 8px;color: #858585;}
-.navbar-nav>li.active>a, .navbar-nav>li>a:hover {color: #009baf}
+.navbar-nav>li.active>a, .navbar-nav>li>a:hover {color: #00aac0}
 
 .navbar-nav.navbar-right:last-child {margin-right: -15px;margin-top: 34px; margin-bottom: -18px;}
 .btn-brand{background-color: #00aac0; border-color: #00aac0;color:#fff}
