--- a/assets/custom/css/parallax-slider.css
+++ b/assets/custom/css/parallax-slider.css
@@ -78,8 +78,8 @@
 	margin-left:-2%;
 }
 .da-slide p i {
-background-color: #ff4800;
-background-color: rgba(255, 92, 0, 1);
+background-color: #00aac0;
+/* background-color: rgba(255, 92, 0, 1); */
 padding: 0 10px;
 font-style: normal;
 -webkit-border-radius: 0;
