--- a/assets/custom/css/parallax-slider.css
+++ b/assets/custom/css/parallax-slider.css
@@ -79,7 +79,7 @@
 }
 .da-slide p i {
 background-color: #00aac0;
-/* background-color: rgba(255, 92, 0, 1); */
+background-color: #00aac0;
 padding: 0 10px;
 font-style: normal;
 -webkit-border-radius: 0;
