--- a/assets/custom/css/parallax-slider.css
+++ b/assets/custom/css/parallax-slider.css
@@ -17,7 +17,7 @@
 	height: 100%;
 	top: 0px;
 	left: 0px;
-	font-family: 'BebasNeueRegular', 'Arial Narrow', Arial, sans-serif;
+	font-family: 'BebasNeueRegular', 'Arial Narrow', Arial, sans-serif ,Helvetica;
 	text-align: left;
 }
 .da-slide-current{
@@ -48,7 +48,7 @@
 	opacity: 1;
 }
 .da-slide h2{
-    font-family: 'Roboto', Arial, sans-serif;
+    font-family: 'Roboto', Arial, sans-serif, Helvetica;
 	color: #222;
 	line-height:50px;
 	top: 80px;
@@ -67,7 +67,7 @@
     border-radius: 3px;
 }
 .da-slide p {
-    font-family: 'Roboto', Arial, sans-serif;
+    font-family: 'Roboto', Arial, sans-serif , Helvetica;
 	font-size:18px;
 	font-weight:400;
 	line-height: 25px;
