--- a/assets/custom/css/parallax-slider.css
+++ b/assets/custom/css/parallax-slider.css
@@ -48,7 +48,7 @@
 	opacity: 1;
 }
 .da-slide h2{
-    font-family: 'Roboto', 'Helvetica',Arial, sans-serif;
+    font-family: 'Kanit', 'Helvetica',Arial, sans-serif;
 	color: #222;
 	line-height:50px;
 	top: 80px;
@@ -67,7 +67,7 @@
     border-radius: 3px;
 }
 .da-slide p {
-    font-family: 'Roboto', 'Helvetica', Arial, sans-serif;
+    font-family: 'Kanit', 'Helvetica', Arial, sans-serif;
 	font-size:18px;
 	font-weight:400;
 	line-height: 25px;
