--- a/assets/custom/css/business-plate.css
+++ b/assets/custom/css/business-plate.css
@@ -211,7 +211,7 @@ transition: all 0.3s ease-out;
 /* Toggle menu */
 .navbar-collapse {background: #fff;z-index: 9999;}
 .navbar-toggle {border-radius: 0;outline:0}
-.navbar-toggle span {border-color: #ff0000;background: red;}
+.navbar-toggle span {border-color: #00aac0;background: #00aac0;}
 .nav>li>a:hover, .nav>li>a:focus {text-decoration: none;background-color: #fff;}
 .nav .open>a, .nav .open>a:hover, .nav .open>a:focus {background-color: #fff; border-color: #428bca;}
 .navbar-nav>li>a {padding-top: 6px;padding-bottom: 8px;color: #858585;}
