--- a/assets/custom/css/business-plate.css
+++ b/assets/custom/css/business-plate.css
@@ -11,6 +11,7 @@ img{max-width:100%}
 z-index: 999;
 position: relative;
 padding: 0;
+box-shadow: 0 1px 6px 3px #ccc;
 }
 .is-sticky {
 width: 100%;
@@ -25,8 +26,10 @@ background-color: rgba(255, 255, 255, 0.95);
 /*Top Bar (login, search etc.)
 ------------------------------------*/
 .top {
+	left: 0;
     padding-top: 5px;
-    padding-bottom: 5px;
+	padding-bottom: 5px;
+	width: 100%;
     background-color: #E9E9E9;
 	z-index:9999;
 }
@@ -36,27 +39,29 @@ background-color: rgba(255, 255, 255, 0.95);
 
 .phone-mail {
     margin:0 20px 0 0;
-    padding:0;
+    padding:5px ;
     z-index:9999;
     list-style:none;
     position:relative;
-    float: left;
+	float: left;
+	
 }
 .phone-mail li {
+	
     display:inline;
     list-style:none;
     padding-bottom:15px;
     margin-right: 5px;
 }
 .phone-mail i {
-    font-size:11px;
+    font-size:14px;
     margin-top:3px;
     margin-right: 3px;
     color:#999;
 }
 .phone-mail li span {
     color:#7c8082;
-    font-size:11px;
+    font-size:14px;
     font-family: 'Kanit', 'Helvetica',sans-serif;
 }
 
@@ -185,7 +190,7 @@ background-color: rgba(255, 255, 255, 0.95);
 .bannerSection{background:#e5e5e5; padding:0}
 .highlightSection{color:#333; background:#fafafa; padding:18px 0; border-bottom: 1px solid #D1D1D1}
 .highlightSection h2{padding-top:0; margin-top:0; font-size:21px}
-.highlightSection h4{padding-top:0; margin-top:0; line-height:1.6em; font-size:18px}
+.highlightSection h4{padding-top:0; margin-top:0; line-height:1.6em; font-size:16px}
 .bodySection{background:#fff; padding:18px 0}
 .align-right{text-align:right}
 
